--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
                 <button class="btn" type="submit">Save Task</button>
                 <button class="clear">Clear</button>
                 <button id="update" class="btn" type="submit">Update</button>
+
                 <button id="cancel" class="clear">Cancel</button>
             </div>
+
+                <div class="progresscont"><div class="progress"></div></div>
+                <p><span id="percentage"></span></p>
+
+        </div>
         </div>
         <div class="todos"></div>
         <!-- <div class="alltodo">
