--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="savetodo">
             <h1>Create A Todo</h1>
             <input id="todotext" class="todotitle" placeholder="Title" type="text" name="" id="" focus required>
-            <input id="todotext" class="tododesc" placeholder="description" type="text" required>
+            <input id="todotext" class="tododesc" placeholder="Description" type="text" required>
             <div class="taskaction">
                 <button class="btn" type="submit">Save Task</button>
                 <button class="clear">Clear</button>
